2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for new long MathML entities (HTML5
	revision 1406).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: CDATA section support for MathML and SVG 
	elements (HTML5 revision 1404 and 1420).

2008-04-12  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: Support for MathML and SVG
	elements (HTML5 revision 1404).  Unused !!!macro definitions
	are removed.

2008-04-12  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: The way permitted slash errors
	are raised is changed (HTML5 revision 1404).

2008-04-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Category sets that are no longer used are removed.

2008-04-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The ->[1] property of stack entries are now
	replaced by constants representing element category.

2008-04-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Don't use local name stored in stack (i.e. ->[1])
	for error reporting.  (This is a preparation for using constant
	value for ->[1].)

2008-03-22  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: Typo fixed.

2008-03-22  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: |fact_level| is now treated
	as same as |must_level|, i.e. level = |m|.
	(check_element): Make list of URIs in the DOM.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: Language accessor implemented.
	Local (null-namespace) attribute support.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: Factored out ID checking code.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: TODO items noted.  Validation of ID
	and URI attributes is implemented.  Warn if unknown
	value is used in rdf:parseType="" attribute.

	* URIChecker.pm (check_rdf_uri_reference): New function.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: bnodeid implemented.  Relative references
	are now resolved.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>
