@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.128 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.129 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -3690,7 +3690,8 @@ sub _tree_construction_main ($) {
         !!!next-token;
         next B;
       } elsif ($token->{type} == START_TAG_TOKEN) {
-        if ($self->{open_elements}->[-1]->[1] & FOREIGN_FLOW_CONTENT_EL or
+        if ((not {mglyph => 1, malignmark => 1}->{$token->{tag_name}} and
+             $self->{open_elements}->[-1]->[1] & FOREIGN_FLOW_CONTENT_EL) or
             not ($self->{open_elements}->[-1]->[1] & FOREIGN_EL) or
             ($token->{tag_name} eq 'svg' and
              $self->{open_elements}->[-1]->[1] & MML_AXML_EL)) {
@@ -7026,4 +7027,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/04/12 15:31:56 $
+# $Date: 2008/04/12 15:37:33 $
