@@ -1,5 +1,10 @@
 2008-04-13  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Support for |mglyph| and |malignmark|
+	elements (HTML5 revision 1410).
+
+2008-04-13  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Support for new long MathML entities (HTML5
 	revision 1406).
 
